# Standardized-Training-of-Humanoid-Robots

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  deploy-autodl.md
scripts/: dev_install.sh  serve.sh  start.sh
src/hrtrain/: __init__.py  config.py  db.py  main.py  models.py  remote.py
src/hrtrain/api/: __init__.py  routes.py  sse.py
src/hrtrain/exporter/: __init__.py  pipeline.py
src/hrtrain/loaders/: __init__.py  amass.py  base.py  bvh.py  fbx.py  registry.py  smpl.py
src/hrtrain/retarget/: __init__.py  gmr_wrapper.py  to_train_npz.py
src/hrtrain/trainer/: __init__.py  manager.py  progress.py  runner.py
src/hrtrain/web/static/: app.css
src/hrtrain/web/templates/: base.html  index.html  job_detail.html
src/hrtrain/web/templates/partials/: job_row.html  upload_card.html
tests/: test_loaders_bvh.py
tests/fixtures/: tiny.bvh
